--- a/Blog/templates/_base.html
+++ b/Blog/templates/_base.html
@@ -1,11 +1,12 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
-    {% load static %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block page_title %} PAGE-TITLE {% endblock page_title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
   </head>
   <body>
    
