--- a/Blog/templates/index.html
+++ b/Blog/templates/index.html
@@ -8,14 +8,18 @@ H O M E 🔥
 {% block page_content %}
     <div class="container">
         <div class="row">
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"><b>post-title</b></h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="{% url 'viewPost' 1%}" class="btn btn-primary">view post</a>
-                </div>
-              </div>
+          {% for post in posts %}
+            <div class="col-md-4 mt-2">
+                <div class="card">
+                    <img src="{{ post.banner.url }}" class="card-img-top post-cover" alt="post_image" style="width: 100%;height: 200px;object-fit: cover;object-position: center;">
+                    <div class="card-body">
+                      <h5 class="card-title"><b>{{ post.title }}</b></h5>
+                      <p class="card-text">{{ post.content }}</p>
+                      <a href="{% url 'viewPost' post.id%}" class="btn btn-primary">view post</a>
+                    </div>
+                  </div>
+            </div>
+          {% endfor %}
         </div>
     </div>
 {% endblock page_content %}
