added deletion code where user can delete post

--- a/Blog/templates/view_post.html
+++ b/Blog/templates/view_post.html
@@ -20,7 +20,7 @@ VIEW POST - POST-NAME
                 <hr>
                 <div class="d-flex float-end">
                     <a href="{% url 'updatePost' post.id %}" class="btn btn-warning">UPDATE</a>
-                    <a href="{% url 'updatePost' post.id %}" class="btn btn-danger mx-3">DELETE</a>
+                    <a href="{% url 'deletePost' post.id %}" class="btn btn-danger mx-3">DELETE</a>
                 </div>
             </div>
         </div>
